2008-08-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate): call
	end_system_call(); before signaling errors

2008-08-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate, FILE-SIZE):
	handle WIN32_NATIVE before HAVE_TRUNCATE & HAVE_FTRUNCATE because
	WIN32_NATIVE has a broken ftruncate (similar to fstat: accept some
	unknown int instead of a handle)
	(I_to_offset, STREAM-LOCK, %SETHOSTID): check arg type before conversion
	(file_offset_t): new type, necessary because file offset in win32
	is represented by a non-integer type LARGE_INTEGER
	(I_to_file_offset): convert from an integer
	(path_truncate, stream_truncate): accept length of type file_offset_t
	(%SET-FILE-SIZE): use I_to_file_offset
	(FILE-SIZE): use L2_to_I for WIN32_NATIVE

2008-08-15  Sam Steingold  <sds@gnu.org>

	* pathname.d (find_first_file): fix FindFirstFile call

2008-08-14  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (HOSTID): rename from GETHOSTID
	(%SETHOSTID) [HAVE_SETHOSTID]: add
	* modules/syscalls/posix.lisp (hostid): add a defsetf
	* modules/syscalls/configure.in (sethostid): add a check

2008-08-13  Frederik  <freggy@gmail.com>
	Sam Steingold  <sds@gnu.org>

	* modules/postgresql/configure.in: fix a typo in header detection

2008-08-12  Sam Steingold  <sds@gnu.org>

	* pathname.d (PROBE-PATHNAME): call use_default_dir before
	classify_namestring because the win32 real_path requires an
	absolute pathname

2008-08-12  Sam Steingold  <sds@gnu.org>

	* socket.d: all known unix (and woe32) systems have gethostname

2008-08-12  Sam Steingold  <sds@gnu.org>

	all known unix systems have uname
	* unix.d (uname): remove prototype
	* m4/utsname.m4: remove
	* configure.in, syscalls/configure.in: do not use CL_UTSNAME
	* misc.d (MACHINE-TYPE, MACHINE-VERSION) [UNIX]: assume uname()

2008-08-11  Sam Steingold  <sds@gnu.org>

	* pathname.d: regularize #ifdef UNIX/WIN32 to #if/#elif/#else #error
